--- a/common.tex
+++ b/common.tex
@@ -55,12 +55,11 @@
 
 % for showing the version
 \newcommand{\nodPlaceBox}[3]{% \placetextbox{<horizontal pos>}{<vertical pos>}{<stuff>}
-  \setbox0=\hbox{#3}% Put <stuff> in a box
-  \AddToShipoutPictureFG*{% Add <stuff> to current page foreground
-    \put(
-        \LenToUnit{#1\paperwidth},\LenToUnit{#2\paperheight}
-    ){
-        \vtop{{\null}\makebox[0pt][c]{#3}}
+  \AddToShipoutPictureFG{% Add <stuff> to all page foreground
+    \put(%
+        \LenToUnit{#1\paperwidth},\LenToUnit{#2\paperheight}%
+    ){%
+        \vtop{{\null}\makebox[0pt][c]{#3}}%
     }%
   }%
 }%
