en: minor updates

--- a/common.tex
+++ b/common.tex
@@ -29,9 +29,7 @@
 %
 
 \newcommand{\nodSection}[1]{\setlength{\hintscolumnwidth}{50mm}\vspace{-5pt}\section{#1}}
-
-\newcommand{\nodItemMission}[1]{\item[\color{color1}$\bullet$] #1}
-\newcommand{\nodItemSkill}[1]{\item[\color{color1}$\circ$] \textit{#1}}
+\newcommand{\nodItem}[1]{\item[\color{color1}$\bullet$] #1}
 
 % mycvxp: company, date, location, title, missions/results/skills
 \newcommand{\nodCvItem}[5]{
