en: set PDF metadata

--- a/en.tex
+++ b/en.tex
@@ -16,6 +16,13 @@ PLACEHOLDER_MOBILE_NUMBER  % if \mobile{} is empty, the phone logo still shows u
 %\social[github]{Nodraak}
 %\extrainfo{PLACEHOLDER_EXTRAINFO} % birthday
 
+\AfterPreamble{
+    \hypersetup{
+        pdftitle={Adrien Chardon's Resumé},
+        pdfsubject={},
+    }
+}
+
 %%%%%%%%%%%%%%%%%%%%
 % Version and page number
 %%%%%%%%%%%%%%%%%%%%
