en: update Hobbies

--- a/en.tex
+++ b/en.tex
@@ -149,15 +149,18 @@ PLACEHOLDER_MOBILE_NUMBER  % if \mobile{} is empty, the phone logo still shows u
 \cventry{Spanish}{Conversational (B1)}{}{}{}{}
 
 %%%%%%%%%%%%%%%%%%%%
-\nodSection{Hobbies}
+\nodSection{Hobbies and Side Projects}
 %%%%%%%%%%%%%%%%%%%%
 
 \setlength{\hintscolumnwidth}{30mm}
 
 \cvitem{Writing}{\url{https://blog.nodraak.fr}}
-\cvitem{Tourism}{Museums and cities}
+\cvitem{Side projects}{Moon Lander GNC software written in Rust (\httplink[Learn more on my blog]{blog.nodraak.fr/series/aerospace-simulator/}, \httplink[Source code]{github.com/Nodraak/MoonLander.rs})}
+\cvitem{}{Running performance analysis (\httplink[Source code]{github.com/Nodraak/Running})}
 \cvitem{Sports}{Running (HM: 1h29), swing dancing, roller/ice skating}
-\cvitem{Learning and making}{Software and robotics projects - Recently: learning Rust lang}
-\cvitem{Playing}{Kerbal Space Program}
+
+% Learning German
+% \cvitem{Tourism}{Museums and cities}
+% \cvitem{Playing}{Kerbal Space Program}
 
 \end{document}
